# MiniScene-Video

./: .gitignore  README.md  _diag_detect.py  analytics_engine.py  pyproject.toml  requirements.txt  run_miniscene.py  server.py  test.html  test.txt  test_caching.py
frontend/: package-lock.json  package.json
frontend/public/: objects_3d.json  point_cloud.ply
frontend/src/: AnalyticsPanel.jsx  App.jsx  AssistantPanel.jsx  CVOverlay.jsx  CVPanel.jsx  CVReconstructionEngine.js  ControlsHelp.jsx  FurnitureLibrary.jsx  FurnitureModels.jsx  GraphOverlay.jsx  LandingHero.jsx  MeasurementOverlay.jsx  MeasurementPanel.jsx  ObjectProperties.jsx  ProcessingStatus.jsx  ProxyRoom.jsx  RecommendationEngine.js  RecommendationOverlay.jsx  RepairEngine.js  Scene.jsx  SceneGraphEngine.js  SceneGraphPanel.jsx  SceneReadyBanner.jsx  SemanticOverlay.jsx  SemanticPanel.jsx  VideoUpload.jsx  ViewSettings.jsx  WalkableEngine.js  WalkableOverlay.jsx  WalkablePanel.jsx  index.css
scratch/: test_write.py
src/miniscene/: cli.py  config.py  image_cli.py
src/miniscene.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/miniscene/cv/: indoor_objects.py  motion.py  objects.py
src/miniscene/depth/: estimator.py
src/miniscene/io/: video.py
src/miniscene/recon/: reconstruct.py  trellis2.py
src/miniscene/viz/: immersive.py  interactive.py
